<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_page"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_shopcart"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:title="@string/sepetim"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_customer_orders"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="Siparişlerim"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>