<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_market"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/rounded_button"
        android:text="@string/market"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_customer" />

    <Button
        android:id="@+id/button_customer"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginBottom="87dp"
        android:background="@drawable/rounded_button"
        android:text="@string/customer"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button_market"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="94dp"
        android:background="@color/colorBackground"
        android:gravity="center|start"
        app:layout_constraintBottom_toTopOf="@+id/button_customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/applogo"
            app:srcCompat="@drawable/bakkal_logo" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>